<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>
        <CheckBoxPreference
            android:title="@string/relay_mode"
            android:key="relayPref"
            android:summary="@string/mode_desc"/>
        <EditTextPreference
            android:title="@string/remark"
            android:key="remarkPref"
            android:summary="@string/remark_desc"
            android:defaultValue=""
            android:inputType="text"/>
    </PreferenceCategory>
    <PreferenceCategory>
        <EditTextPreference
            android:title="@string/apiKey"
            android:key="apiKeyPref"
            android:summary="@string/apikey_desc"
            android:defaultValue=""
            android:inputType="text"/>
        <EditTextPreference
            android:title="@string/ip"
            android:key="ipPref"
            android:summary="@string/ip_desc"
            android:defaultValue="@string/default_ip"
            android:inputType="text"/>
        <EditTextPreference
            android:title="@string/port"
            android:key="portPref"
            android:defaultValue="@string/default_port"
            android:inputType="number"/>
    </PreferenceCategory>
    <PreferenceCategory>
        <ListPreference
            android:entries="@array/connection_type_entries"
            android:title="@string/connection_type"
            android:key="clientTypePref"
            android:summary="@string/connection_type_desc"
            android:defaultValue="KCP"
            android:entryValues="@array/connection_type_values"/>
    </PreferenceCategory>
    <PreferenceCategory>
        <CheckBoxPreference
            android:title="@string/debug_logging"
            android:key="debugLogPref"
            android:summary="@string/enable_debug_logging"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:title="@string/clear_preferences"
            android:key="clearPreferences"
            android:summary="@string/clear_preferences_summary"/>
    </PreferenceCategory>
</PreferenceScreen>
