<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/scanConfig"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanConfig"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>
    <Button
        android:id="@+id/proxyModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proxy_mode"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>
    <Button
        android:id="@+id/relayModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relay_mode"/>
</LinearLayout>
